--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -21,11 +22,44 @@ section{
 .half-width img{
 width: 80%;
 }
+p{
+    margin-bottom: 40px;
+}
 .order-button{
     text-decoration: none;
     background-image: radial-gradient(orange,tomato);
     padding: 10px 20px;
     color: white;
     font-weight: 300; 
-    border-radius: 25px;
+    border-radius: 40px;
+    margin-bottom: 30px;
+}
+.banner-card{
+    position: relative;
+}
+.banner-card img{
+max-width: 100%;
+height: auto;
+
+}
+.banner-text{
+position: absolute;
+
+top: 25%;
+padding-left: 700px;
+}
+.banner-text h4{
+    font-size: 40px;
+    
+    font-weight: bold;
+    margin-bottom: 5px;
+    color:rgb(52, 62, 71) ;
+}
+.top-banner{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    
+}
+.banner-text p{
+    margin-bottom: 50px;
 }
