--- a/style.css
+++ b/style.css
@@ -63,3 +63,15 @@ padding-left: 700px;
 .banner-text p{
     margin-bottom: 50px;
 }
+.recipies h4{
+    font-size: 40px; 
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: rgb(52, 62, 71);
+    text-align: center;
+}
+.recipies p{
+    text-align: center;
+    padding: 10px 20px;
+    margin-bottom: 50px;
+}
